--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
+*.log.*
 local_settings.py
 db.sqlite3
 
@@ -116,3 +116,4 @@ dmypy.json
 .idea/
 .DS_Store
 config.json
+*.log
